Revamp index.html with new layout and features
Updated the structure and content of the index.html file, including navigation links, header, footer, and added a drawer menu for mobile view.

--- a/index.html
+++ b/index.html
@@ -1,145 +1,91 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Promosi</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>KATALOGPROMOSI.COM | INFO DISKON, PROMO, SALE DAN KATALOG BELANJA TERBARU</title>
 </head>
 
 <body>
+    <header class="kp-header">
+        <nav class="kp-nav">
+            <!-- LOGO -->
+            <div class="kp-logo">
+                <img src="kp.logo.png" alt="KatalogPromosi" />
+            </div>
 
-    <!-- HEADER -->
-    <header>
-        <h1>KatalogPromosi</h1>
-
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Promo Terbaru</a>
-            <a href="#">Kategori</a>
-            <a href="#">Katalog</a>
-            <a href="#">Artikel</a>
+            <!-- NAVIGATION LINKS -->
+            <ul class="kp-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="promo.html">Hot Promo</a></li>
+                <li><a href="kategori.html">Kategori</a></li>
+                <li><a href="katalog.html">Katalog</a></li>
+                <li><a href="event.html">Event</a></li>
+                <li><a href="voucher.html">Voucher</a></li>
+            </ul>
+            <div class="kp-right">
+                <div class="kp-bookmark">📖</div>
+                <!-- HAMBURGER -->
+                <button class="kp-hamburger" id="hamburgerBtn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
         </nav>
 
-        <div class="hamburger" id="hamburgerBtn" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
+        <!-- SIDE DRAWER MENU -->
+        <div class="kp-drawer" id="drawerMenu">
+            <button class="kp-close" id="closeDrawer">✕</button>
+
+            <a href="index.html">Home</a>
+            <a href="promo.html">Hot Promo</a>
+            <a href="kategori.html">Kategori</a>
+            <a href="katalog.html">Katalog</a>
+            <a href="event.html">Event</a>
+            <a href="voucher.html">Voucher</a>
         </div>
     </header>
-
-    <!-- MOBILE NAV -->
-    <div class="mobile-nav" id="mobileNav">
-        <a href="#" onclick="closeMenu()">Promo Hari Ini</a>
-        <a href="#" onclick="closeMenu()">Katalog</a>
-        <a href="#" onclick="closeMenu()">Event</a>
-        <a href="#" onclick="closeMenu()">Artikel</a>
+    <div class="container">
     </div>
-
-    <!-- HERO -->
-    <section class="hero">
-        <h2>Temukan Promo & Katalog Terbaru Setiap Hari</h2>
-    </section>
-
-    <!-- PROMO SECTION -->
-    <h2 class="section-title">Promo Terbaru Hari Ini</h2>
-
-    <section class="promo-grid">
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1581695943505-69c291a60223">
-            <div class="promo-info">
-                <h3>Promo JSM Alfamart</h3>
-                <p>Berlaku 22–25 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836">
-            <div class="promo-info">
-                <h3>Promo Indomaret Hemat</h3>
-                <p>Berlaku 20–26 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1523206489230-c012c64b2b48">
-            <div class="promo-info">
-                <h3>Katalog Hypermart Weekend</h3>
-                <p>Berlaku 21–24 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1542831371-d531d36971e6">
-            <div class="promo-info">
-                <h3>Promo Superindo Mingguan</h3>
-                <p>Berlaku 21–27 November</p>
-            </div>
-        </div>
-    </section>
-    <section class="promo-grid">
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1581695943505-69c291a60223">
-            <div class="promo-info">
-                <h3>Promo JSM Alfamart</h3>
-                <p>Berlaku 22–25 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836">
-            <div class="promo-info">
-                <h3>Promo Indomaret Hemat</h3>
-                <p>Berlaku 20–26 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1523206489230-c012c64b2b48">
-            <div class="promo-info">
-                <h3>Katalog Hypermart Weekend</h3>
-                <p>Berlaku 21–24 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1542831371-d531d36971e6">
-            <div class="promo-info">
-                <h3>Promo Superindo Mingguan</h3>
-                <p>Berlaku 21–27 November</p>
-            </div>
-        </div>
-    </section>
-
     <footer>
-        © 2025 KatalogPromosi — Informasi promo dapat berubah sewaktu-waktu.
+        <div class="footer-logo">
+            <h2><img src="kp.logo.png" width="150"></h2>
+            <p>DISKON | SALE | KATALOG BELANJA</p>
+        </div>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Alamat</h3>
+                <p>Gedung WTC Mangga Dua Lt. 1<br>Blok C. 85-87, Jakarta Utara<br><br>Telp: +6287888768128 (WA Only)</p>
+            </div>
+            <div class="footer-section">
+                <h3>Social Media</h3>
+                <div class="social-icons">
+                    <div class="social-icon">f</div>
+                    <div class="social-icon">𝕏</div>
+                    <div class="social-icon">in</div>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Tentang Katalogpromosi.</h3>
+                <p>Katalogpromosi.com adalah sebuah situs web yang bertujuan untuk memberikan informasi promosi terpadu
+                    khusus kalian para pecinta Diskon di Indonesia</p>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>katalogpromosi.com copyright © 2025</p>
+        </div>
     </footer>
-
-    <!-- JAVASCRIPT -->
     <script>
-        const hamburger = document.getElementById("hamburgerBtn");
-        const mobileNav = document.getElementById("mobileNav");
+        // Hamburger
+        const drawer = document.getElementById("drawerMenu");
+        const openBtn = document.getElementById("hamburgerBtn");
+        const closeBtn = document.getElementById("closeDrawer");
 
-        function toggleMenu() {
-            hamburger.classList.toggle("active");
-
-            mobileNav.style.display =
-                mobileNav.style.display === "flex" ? "none" : "flex";
-        }
-
-        function closeMenu() {
-            mobileNav.style.display = "none";
-            hamburger.classList.remove("active");
-        }
-
-        document.addEventListener("click", (e) => {
-            if (!hamburger.contains(e.target) && !mobileNav.contains(e.target)) {
-                closeMenu();
-            }
-        });
+        openBtn.onclick = () => (drawer.style.left = "0");
+        closeBtn.onclick = () => (drawer.style.left = "-260px");
     </script>
-
 </body>
+
 </html>
+
