--- a/index.html
+++ b/index.html
@@ -1,145 +1,296 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Promosi</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <title>KATALOGPROMOSI.COM | INFO DISKON, PROMO, SALE DAN KATALOG BELANJA TERBARU</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header class="kp-header">
+        <nav class="kp-nav">
+            <!-- LOGO -->
+            <div class="kp-logo">
+                <img src="kp.logo.png" alt="KatalogPromosi" />
+            </div>
 
-    <!-- HEADER -->
-    <header>
-        <h1>KatalogPromosi</h1>
-
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Promo Terbaru</a>
-            <a href="#">Kategori</a>
-            <a href="#">Katalog</a>
-            <a href="#">Artikel</a>
+            <!-- NAVIGATION LINKS -->
+            <ul class="kp-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="promo.html">Hot Promo</a></li>
+                <li><a href="kategori.html">Kategori</a></li>
+                <li><a href="katalog.html">Katalog</a></li>
+                <li><a href="event.html">Event</a></li>
+                <li><a href="voucher.html">Voucher</a></li>
+            </ul>
+            <div class="kp-right">
+                <div class="kp-bookmark">📖</div>
+                <!-- HAMBURGER -->
+                <button class="kp-hamburger" id="hamburgerBtn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
         </nav>
 
-        <div class="hamburger" id="hamburgerBtn" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
+        <!-- SIDE DRAWER MENU -->
+        <div class="kp-drawer" id="drawerMenu">
+            <button class="kp-close" id="closeDrawer">✕</button>
+
+            <a href="index.html">Home</a>
+            <a href="promo.html">Hot Promo</a>
+            <a href="kategori.html">Kategori</a>
+            <a href="katalog.html">Katalog</a>
+            <a href="event.html">Event</a>
+            <a href="voucher.html">Voucher</a>
         </div>
     </header>
+    <div class="container">
+        <section class="hero">
+        <div class="search-bar">
+            <input type="text" placeholder="Cari promo, brand, atau produk...">
+        </div>
+        <div class="hero-content">
+            <h1>Promo Black Friday Sale 2025! Diskon Brand Favorit Hingga 50%</h1>
+            <p>⏰ 27-30 November 2025</p>
+        </div>
+    </section>
 
-    <!-- MOBILE NAV -->
-    <div class="mobile-nav" id="mobileNav">
-        <a href="#" onclick="closeMenu()">Promo Hari Ini</a>
-        <a href="#" onclick="closeMenu()">Katalog</a>
-        <a href="#" onclick="closeMenu()">Event</a>
-        <a href="#" onclick="closeMenu()">Artikel</a>
+    <section class="tags-section">
+        <div class="tags-container">
+            <div class="tag">#DOUBLEDATE11.11</div>
+            <div class="tag">#PROMOJSM</div>
+            <div class="tag">#BIRTHDAYTEATS</div>
+            <div class="tag">#PAYDAYDEALS</div>
+            <div class="tag">All You Can Eat</div>
+            <div class="tag">Ayam Goreng</div>
+            <div class="tag">Beauty</div>
+            <div class="tag">Burger</div>
+            <div class="tag">Fashion</div>
+            <div class="tag">Elektronik</div>
+            <div class="tag">Kopi & Teh</div>
+            <div class="tag">Supermarket</div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="section-title">PROMO MINGGU INI</h2>
+        <div class="promo-grid">
+            <div class="promo-card featured">
+                <div class="brands">
+                    <div class="brand-logo"><img src="Hophop.png" width="50" alt=""></div>
+                    <div class="brand-logo"><img src="Alfamart.png" width="100" alt=""></div>
+                    <div class="brand-logo"><img src="Indomaret.png" width="100" alt=""></div>
+                    <div class="brand-logo"><img src="Adidas.jpg" width="60" alt=""></div>
+                    <div class="brand-logo" style="grid-column: span 2;"><img src="Janji Jiwa.png" width="150" alt=""></div>
+                </div>
+                <div style="position: absolute; bottom: 25px;">
+                    <div style="font-size: 50px; font-weight: bold; line-height: 1; margin-top: 5px;">up to<br>70%</div>
+                    <div style="font-size: 32px; margin-top: 5px;"></div>
+                </div>
+            </div>
+            <div class="promo-card">
+                <span style="color: #999;"><img src="IFBEX-2025-678x381.jpg" width="400" alt=""></span>
+            </div>
+            <div class="promo-card">
+                <span style="color: #999;"><img src="superindo.webp" width="350" alt=""></span>
+            </div>
+            <div class="promo-card wide">
+                <span style="color: #999;"><img src="promo-jsm-minggu-ini.jpg" width="800" height="220" alt=""></span>
+            </div>
+            <div class="promo-card">
+                <span style="color: #999;"><img src="grilman.jpg" width="350" alt=""></span>
+            </div>
+        </div>
+
+        <div class="category-grid">
+            <button class="category-btn">
+                <div class="category-icon">🛒</div>
+                <span>Supermarket</span>
+            </button>
+            <button class="category-btn">
+                <div class="category-icon">🍔</div>
+                <span>Fast Food</span>
+            </button>
+            <button class="category-btn">
+                <div class="category-icon">👕</div>
+                <span>Fashion</span>
+            </button>
+            <button class="category-btn">
+                <div class="category-icon">💄</div>
+                <span>Beauty</span>
+            </button>
+            <button class="category-btn" style="background: #666;">
+                <span style="font-size: 18px;">Katalog<br>lain-nya</br></span>
+            </button>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="section-title">NEW DEALS</h2>
+        <div class="deals-grid">
+            <div class="deal-card">
+                <div class="deal-image">
+                    <span><img src="promo-marugame-udon-12-12.jpg" alt=""></span>
+                    <div class="bookmark">🔖</div>
+                </div>
+                <div class="deal-info">
+                    <h3 class="deal-title">Promo Marugame Udon 12.12 Udon Mulai Rp. 12.000</h3>
+                    <p class="deal-desc">Semangkuk udon mulai Rp. 12 ribu dengan pembelian menu tertentu di seluruh outlet</p>
+                    <p class="deal-meta">⏱ 10-12 Desember 2025</p>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                    </div>
+                    <p class="rating-text">Rating Bintang 5</p>
+                </div>
+            </div>
+
+            <div class="deal-card">
+                <div class="deal-image">
+                    <span><img src="promo mcd.jpg" alt=""></span>
+                    <div class="bookmark">🔖</div>
+                </div>
+                <div class="deal-info">
+                    <h3 class="deal-title">Promo McDonalds Desember Hemat Delivery diskon hingga 40%</h3>
+                    <p class="deal-desc">Diskon hingga 40% untuk pesanan McDelivery dan GrabFood di menu pilihan</p>
+                    <p class="deal-meta">⏱ Berlaku sepanjang Desember 2025</p>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star empty">★</span>
+                    </div>
+                    <p class="rating-text">Rating Bintang 4</p>
+                </div>
+            </div>
+
+            <div class="deal-card">
+                <div class="deal-image">
+                    <span><img src="promo-sushiro.jpg" alt=""></span>
+                    <div class="bookmark">🔖</div>
+                </div>
+                <div class="deal-info">
+                    <h3 class="deal-title">Promo Sushiro Year-End Vaganza mulai Rp. 14.000</h3>
+                    <p class="deal-desc">Pilihan seasonal menu premium dengan harga mulai Rp. 14.000 di seluruh outlet</p>
+                    <p class="deal-meta">⏱ 11 Des 2025 - 14 Jan 2026</p>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                    </div>
+                    <p class="rating-text">Rating Bintang 5</p>
+                </div>
+            </div>
+
+            <div class="deal-card">
+                <div class="deal-image">
+                    <span><img src="promo-jco-beli-2-minuman-rp-55-ribu.jpg" alt=""></span>
+                    <div class="bookmark">🔖</div>
+                </div>
+                <div class="deal-info">
+                    <h3 class="deal-title">Promo JCO Beli 2 Minuman Rp. 55.000</h3>
+                    <p class="deal-desc">Paket 2 minuman Iced Cappuccino dan Iced Swiss Chocolate via JCO App & Website</p>
+                    <p class="deal-meta">⏱ 8-14 Desember 2025</p>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star empty">★</span>
+                    </div>
+                    <p class="rating-text">Rating Bintang 4</p>
+                </div>
+            </div>
+
+            <div class="deal-card">
+                <div class="deal-image">
+                    <span><img src="promo-indomaret-12-12-serba-rp-12-000-1089x1536.jpg" alt=""></span>
+                    <div class="bookmark">🔖</div>
+                </div>
+                <div class="deal-info">
+                    <h3 class="deal-title">Promo Indomaret 12.12 Serba Rp. 12.000</h3>
+                    <p class="deal-desc">Berbagai produk pilihan dari makanan, kebutuhan rumah tangga dengan harga spesial</p>
+                    <p class="deal-meta">⏱ 12-14 Desember 2025</p>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                    </div>
+                    <p class="rating-text">Rating Bintang 5</p>
+                </div>
+            </div>
+
+            <div class="deal-card">
+                <div class="deal-image">
+                    <span><img src="promo-sephora-12-12-sale-diskon-hingga-20.jpg" alt=""></span>
+                    <div class="bookmark">🔖</div>
+                </div>
+                <div class="deal-info">
+                    <h3 class="deal-title">Promo Sephora 12.12 Sale diskon hingga 20%</h3>
+                    <p class="deal-desc">Diskon hingga 20% untuk belanja lewat website dan aplikasi dengan minimum transaksi</p>
+                    <p class="deal-meta">⏱ 10-12 Desember 2025</p>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star empty">★</span>
+                    </div>
+                    <p class="rating-text">Rating Bintang 4</p>
+                </div>
+            </div>
+        </div>
+    </section>
     </div>
-
-    <!-- HERO -->
-    <section class="hero">
-        <h2>Temukan Promo & Katalog Terbaru Setiap Hari</h2>
-    </section>
-
-    <!-- PROMO SECTION -->
-    <h2 class="section-title">Promo Terbaru Hari Ini</h2>
-
-    <section class="promo-grid">
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1581695943505-69c291a60223">
-            <div class="promo-info">
-                <h3>Promo JSM Alfamart</h3>
-                <p>Berlaku 22–25 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836">
-            <div class="promo-info">
-                <h3>Promo Indomaret Hemat</h3>
-                <p>Berlaku 20–26 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1523206489230-c012c64b2b48">
-            <div class="promo-info">
-                <h3>Katalog Hypermart Weekend</h3>
-                <p>Berlaku 21–24 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1542831371-d531d36971e6">
-            <div class="promo-info">
-                <h3>Promo Superindo Mingguan</h3>
-                <p>Berlaku 21–27 November</p>
-            </div>
-        </div>
-    </section>
-    <section class="promo-grid">
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1581695943505-69c291a60223">
-            <div class="promo-info">
-                <h3>Promo JSM Alfamart</h3>
-                <p>Berlaku 22–25 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836">
-            <div class="promo-info">
-                <h3>Promo Indomaret Hemat</h3>
-                <p>Berlaku 20–26 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1523206489230-c012c64b2b48">
-            <div class="promo-info">
-                <h3>Katalog Hypermart Weekend</h3>
-                <p>Berlaku 21–24 November</p>
-            </div>
-        </div>
-
-        <div class="promo-card">
-            <img src="https://images.unsplash.com/photo-1542831371-d531d36971e6">
-            <div class="promo-info">
-                <h3>Promo Superindo Mingguan</h3>
-                <p>Berlaku 21–27 November</p>
-            </div>
-        </div>
-    </section>
-
     <footer>
-        © 2025 KatalogPromosi — Informasi promo dapat berubah sewaktu-waktu.
+        <div class="footer-logo">
+            <h2><img src="kp.logo.png" width="150"></h2>
+            <p>DISKON | SALE | KATALOG BELANJA</p>
+        </div>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Alamat</h3>
+                <p>Gedung WTC Mangga Dua Lt. 1<br>Blok C. 85-87, Jakarta Utara<br><br>Telp: +6287888768128 (WA Only)</p>
+            </div>
+            <div class="footer-section">
+                <h3>Social Media</h3>
+                <div class="social-icons">
+                    <div class="social-icon">f</div>
+                    <div class="social-icon">𝕏</div>
+                    <div class="social-icon">in</div>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Tentang Katalogpromosi.</h3>
+                <p>Katalogpromosi.com adalah sebuah situs web yang bertujuan untuk memberikan informasi promosi terpadu
+                    khusus kalian para pecinta Diskon di Indonesia</p>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>katalogpromosi.com copyright © 2025</p>
+        </div>
     </footer>
-
-    <!-- JAVASCRIPT -->
     <script>
-        const hamburger = document.getElementById("hamburgerBtn");
-        const mobileNav = document.getElementById("mobileNav");
+        // Hamburger
+        const drawer = document.getElementById("drawerMenu");
+        const openBtn = document.getElementById("hamburgerBtn");
+        const closeBtn = document.getElementById("closeDrawer");
 
-        function toggleMenu() {
-            hamburger.classList.toggle("active");
-
-            mobileNav.style.display =
-                mobileNav.style.display === "flex" ? "none" : "flex";
-        }
-
-        function closeMenu() {
-            mobileNav.style.display = "none";
-            hamburger.classList.remove("active");
-        }
-
-        document.addEventListener("click", (e) => {
-            if (!hamburger.contains(e.target) && !mobileNav.contains(e.target)) {
-                closeMenu();
-            }
-        });
+        openBtn.onclick = () => (drawer.style.left = "0");
+        closeBtn.onclick = () => (drawer.style.left = "-260px");
     </script>
-
 </body>
+
 </html>
+
