--- a/event.html
+++ b/event.html
@@ -835,24 +835,7 @@
                     <!-- Event 1 -->
                     <article class="card" data-type="offline" data-tags="mall">
                         <div class="card-thumb" aria-hidden="true">
-                            <svg width="100%" height="100%" viewBox="0 0 1200 500" xmlns="http://www.w3.org/2000/svg">
-                                <defs>
-                                    <linearGradient id="g1" x1="0" x2="1">
-                                        <stop offset="0" stop-color="#ffd58a" />
-                                        <stop offset="1" stop-color="#ff8555" />
-                                    </linearGradient>
-                                </defs>
-                                <rect width="100%" height="100%" fill="url(#g1)" />
-                                <text x="6%" y="18%" fill="#fff" font-size="20" font-weight="800">
-                                    PLAZA INDONESIA
-                                </text>
-                                <text x="6%" y="44%" fill="#fff" font-size="30" font-weight="800">
-                                    Year End Sale
-                                </text>
-                                <text x="6%" y="70%" fill="#fff" font-size="14">
-                                    Diskon hingga 50% • 30 Nov - 5 Des 2025
-                                </text>
-                            </svg>
+                            <img src="https://i.pinimg.com/736x/2e/86/cc/2e86cc81a68519e5e91cb1db1973c347.jpg"/>
                         </div>
                         <div class="card-body">
                             <div>
@@ -883,15 +866,7 @@
                     <!-- Event 2 -->
                     <article class="card" data-type="online" data-tags="digital">
                         <div class="card-thumb" aria-hidden="true">
-                            <svg width="100%" height="100%" viewBox="0 0 1200 500" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="#e8f6ff" />
-                                <text x="6%" y="40%" fill="#0369a1" font-size="28" font-weight="800">
-                                    FLASH SALE ONLINE
-                                </text>
-                                <text x="6%" y="64%" fill="#0369a1" font-size="14">
-                                    Platform e-commerce • 12 Dec 2025
-                                </text>
-                            </svg>
+                            <img src="https://i.pinimg.com/736x/db/04/21/db0421b1ce810e7d1c4037f12d08874d.jpg" alt="Event Natal">
                         </div>
                         <div class="card-body">
                             <div>
@@ -899,7 +874,7 @@
                                 <div class="card-date">⏰ 12 Des 2025</div>
                                 <div class="card-desc">
                                     Diskon besar-besaran khusus online — voucher, cashback, dan
-                                    free ongkir untuk produk pilihan.
+                                    free ongkir untuk produk pilihan. Buruan di Check!
                                 </div>
                                 <div class="card-meta">
                                     <span class="badge badge-hot">FLASH</span>
@@ -921,15 +896,7 @@
                     <!-- Event 3 -->
                     <article class="card" data-type="offline" data-tags="supermarket">
                         <div class="card-thumb" aria-hidden="true">
-                            <svg width="100%" height="100%" viewBox="0 0 1200 500" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="#fff0db" />
-                                <text x="6%" y="44%" fill="#b45309" font-size="28" font-weight="800">
-                                    JSM SUPERMARKET
-                                </text>
-                                <text x="6%" y="68%" fill="#b45309" font-size="14">
-                                    Tebus Murah • 10-14 Des 2025
-                                </text>
-                            </svg>
+                            <img src="https://i.pinimg.com/736x/68/e7/3d/68e73d075223e8d63fc6726d68d7936f.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <div>
@@ -959,15 +926,7 @@
                     <!-- Event 4 -->
                     <article class="card" data-type="offline" data-tags="mall">
                         <div class="card-thumb" aria-hidden="true">
-                            <svg width="100%" height="100%" viewBox="0 0 1200 500" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="#fff5f0" />
-                                <text x="6%" y="44%" fill="#be185d" font-size="28" font-weight="800">
-                                    FOOD FESTIVAL
-                                </text>
-                                <text x="6%" y="68%" fill="#be185d" font-size="14">
-                                    Festival Kuliner • 20 Des 2025
-                                </text>
-                            </svg>
+                           <img src="https://i.pinimg.com/1200x/4f/29/51/4f2951f18ac2cbba9fdcdb89be560f65.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <div>
@@ -975,7 +934,7 @@
                                 <div class="card-date">⏰ 20 Des 2025</div>
                                 <div class="card-desc">
                                     Festival kuliner dengan puluhan tenant, promo, dan aktivitas
-                                    live cooking untuk keluarga.
+                                    live cooking untuk keluarga. Buruan di check sekarang!
                                 </div>
                                 <div class="card-meta">
                                     <span class="badge badge-hot">EVENT</span>
